RustMiniLangParser.py
# Generated from RustMiniLang.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class RustMiniLangParser ( Parser ):

    grammarFileName = "RustMiniLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'let'", "'mut'", "':'", 
                     "';'", "'i32'", "'bool'", "'println!'", "'\"'", "'{'", 
                     "'}'", "'if'", "'else'", "'while'", "'for'", "'in'", 
                     "'..'", "<INVALID>", "'&'", "'|'", "'*'", "'/'", "'+'", 
                     "'-'", "'='", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "BOOL", "AND", 
                      "OR", "ASTERISK", "SLASH", "PLUS", "MINUS", "ASSIGN", 
                      "EQUAL", "NOT_EQUAL", "LESS", "LESS_OR_EQUAL", "GREATER", 
                      "GREATER_OR_EQUAL", "NUM", "ID", "SPACE", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_expr = 2
    RULE_varDecl = 3
    RULE_assignment = 4
    RULE_compOperator = 5
    RULE_type = 6
    RULE_printId = 7
    RULE_printNum = 8
    RULE_blockstmt = 9
    RULE_ifstmt = 10
    RULE_elsestmt = 11
    RULE_whilestmt = 12
    RULE_forstmt = 13

    ruleNames =  [ "program", "stmt", "expr", "varDecl", "assignment", "compOperator", 
                   "type", "printId", "printNum", "blockstmt", "ifstmt", 
                   "elsestmt", "whilestmt", "forstmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    BOOL=19
    AND=20
    OR=21
    ASTERISK=22
    SLASH=23
    PLUS=24
    MINUS=25
    ASSIGN=26
    EQUAL=27
    NOT_EQUAL=28
    LESS=29
    LESS_OR_EQUAL=30
    GREATER=31
    GREATER_OR_EQUAL=32
    NUM=33
    ID=34
    SPACE=35
    LINE_COMMENT=36
    BLOCK_COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RustMiniLangParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustMiniLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(RustMiniLangParser.StmtContext,i)


        def getRuleIndex(self):
            return RustMiniLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RustMiniLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RustMiniLangParser.T__2) | (1 << RustMiniLangParser.T__8) | (1 << RustMiniLangParser.T__10) | (1 << RustMiniLangParser.T__12) | (1 << RustMiniLangParser.T__14) | (1 << RustMiniLangParser.T__15) | (1 << RustMiniLangParser.ID))) != 0):
                self.state = 28
                self.stmt()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(RustMiniLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(RustMiniLangParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(RustMiniLangParser.AssignmentContext,0)


        def printId(self):
            return self.getTypedRuleContext(RustMiniLangParser.PrintIdContext,0)


        def printNum(self):
            return self.getTypedRuleContext(RustMiniLangParser.PrintNumContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(RustMiniLangParser.IfstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(RustMiniLangParser.BlockstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(RustMiniLangParser.WhilestmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(RustMiniLangParser.ForstmtContext,0)


        def getRuleIndex(self):
            return RustMiniLangParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = RustMiniLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.printId()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.printNum()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 40
                self.ifstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 41
                self.blockstmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 42
                self.whilestmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 43
                self.forstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RustMiniLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MinusNumExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RustMiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(RustMiniLangParser.MINUS, 0)
        def NUM(self):
            return self.getToken(RustMiniLangParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinusNumExpr" ):
                listener.enterMinusNumExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinusNumExpr" ):
                listener.exitMinusNumExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinusNumExpr" ):
                return visitor.visitMinusNumExpr(self)
            else:
                return visitor.visitChildren(self)


    class CompExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RustMiniLangParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def compOperator(self):
            return self.getTypedRuleContext(RustMiniLangParser.CompOperatorContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustMiniLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(RustMiniLangParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompExpr" ):
                listener.enterCompExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompExpr" ):
                listener.exitCompExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompExpr" ):
                return visitor.visitCompExpr(self)
            else:
                return visitor.visitChildren(self)


    class PlusMinusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RustMiniLangParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustMiniLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(RustMiniLangParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(RustMiniLangParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(RustMiniLangParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlusMinusExpr" ):
                listener.enterPlusMinusExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlusMinusExpr" ):
                listener.exitPlusMinusExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlusMinusExpr" ):
                return visitor.visitPlusMinusExpr(self)
            else:
                return visitor.visitChildren(self)


    class BoolExpContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RustMiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(RustMiniLangParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolExp" ):
                listener.enterBoolExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolExp" ):
                listener.exitBoolExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExp" ):
                return visitor.visitBoolExp(self)
            else:
                return visitor.visitChildren(self)


    class AndOrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RustMiniLangParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustMiniLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(RustMiniLangParser.ExprContext,i)

        def AND(self):
            return self.getToken(RustMiniLangParser.AND, 0)
        def OR(self):
            return self.getToken(RustMiniLangParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndOrExpr" ):
                listener.enterAndOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndOrExpr" ):
                listener.exitAndOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndOrExpr" ):
                return visitor.visitAndOrExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesisExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RustMiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(RustMiniLangParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesisExpr" ):
                listener.enterParenthesisExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesisExpr" ):
                listener.exitParenthesisExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesisExpr" ):
                return visitor.visitParenthesisExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RustMiniLangParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustMiniLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(RustMiniLangParser.ExprContext,i)

        def ASTERISK(self):
            return self.getToken(RustMiniLangParser.ASTERISK, 0)
        def SLASH(self):
            return self.getToken(RustMiniLangParser.SLASH, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivExpr" ):
                listener.enterMulDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivExpr" ):
                listener.exitMulDivExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivExpr" ):
                return visitor.visitMulDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class NumExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RustMiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(RustMiniLangParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumExpr" ):
                listener.enterNumExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumExpr" ):
                listener.exitNumExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumExpr" ):
                return visitor.visitNumExpr(self)
            else:
                return visitor.visitChildren(self)


    class IdExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RustMiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(RustMiniLangParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdExpr" ):
                listener.enterIdExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdExpr" ):
                listener.exitIdExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdExpr" ):
                return visitor.visitIdExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RustMiniLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RustMiniLangParser.T__0]:
                localctx = RustMiniLangParser.ParenthesisExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 47
                self.match(RustMiniLangParser.T__0)
                self.state = 48
                self.expr(0)
                self.state = 49
                self.match(RustMiniLangParser.T__1)
                pass
            elif token in [RustMiniLangParser.BOOL]:
                localctx = RustMiniLangParser.BoolExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                self.match(RustMiniLangParser.BOOL)
                pass
            elif token in [RustMiniLangParser.NUM]:
                localctx = RustMiniLangParser.NumExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 52
                self.match(RustMiniLangParser.NUM)
                pass
            elif token in [RustMiniLangParser.MINUS]:
                localctx = RustMiniLangParser.MinusNumExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 53
                self.match(RustMiniLangParser.MINUS)
                self.state = 54
                self.match(RustMiniLangParser.NUM)
                pass
            elif token in [RustMiniLangParser.ID]:
                localctx = RustMiniLangParser.IdExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 55
                self.match(RustMiniLangParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 73
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 71
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = RustMiniLangParser.MulDivExprContext(self, RustMiniLangParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 58
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 59
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==RustMiniLangParser.ASTERISK or _la==RustMiniLangParser.SLASH):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 60
                        localctx.right = self.expr(9)
                        pass

                    elif la_ == 2:
                        localctx = RustMiniLangParser.PlusMinusExprContext(self, RustMiniLangParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 61
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 62
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==RustMiniLangParser.PLUS or _la==RustMiniLangParser.MINUS):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 63
                        localctx.right = self.expr(8)
                        pass

                    elif la_ == 3:
                        localctx = RustMiniLangParser.AndOrExprContext(self, RustMiniLangParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 64
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 65
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==RustMiniLangParser.AND or _la==RustMiniLangParser.OR):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 66
                        localctx.right = self.expr(7)
                        pass

                    elif la_ == 4:
                        localctx = RustMiniLangParser.CompExprContext(self, RustMiniLangParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 67
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 68
                        self.compOperator()
                        self.state = 69
                        localctx.right = self.expr(6)
                        pass

             
                self.state = 75
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RustMiniLangParser.ID, 0)

        def type(self):
            return self.getTypedRuleContext(RustMiniLangParser.TypeContext,0)


        def ASSIGN(self):
            return self.getToken(RustMiniLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(RustMiniLangParser.ExprContext,0)


        def getRuleIndex(self):
            return RustMiniLangParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = RustMiniLangParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(RustMiniLangParser.T__2)
            self.state = 77
            self.match(RustMiniLangParser.T__3)
            self.state = 78
            self.match(RustMiniLangParser.ID)
            self.state = 79
            self.match(RustMiniLangParser.T__4)
            self.state = 80
            self.type()
            self.state = 81
            self.match(RustMiniLangParser.ASSIGN)
            self.state = 82
            self.expr(0)
            self.state = 83
            self.match(RustMiniLangParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RustMiniLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(RustMiniLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(RustMiniLangParser.ExprContext,0)


        def getRuleIndex(self):
            return RustMiniLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = RustMiniLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(RustMiniLangParser.ID)
            self.state = 86
            self.match(RustMiniLangParser.ASSIGN)
            self.state = 87
            self.expr(0)
            self.state = 88
            self.match(RustMiniLangParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def LESS(self):
            return self.getToken(RustMiniLangParser.LESS, 0)

        def LESS_OR_EQUAL(self):
            return self.getToken(RustMiniLangParser.LESS_OR_EQUAL, 0)

        def EQUAL(self):
            return self.getToken(RustMiniLangParser.EQUAL, 0)

        def NOT_EQUAL(self):
            return self.getToken(RustMiniLangParser.NOT_EQUAL, 0)

        def GREATER(self):
            return self.getToken(RustMiniLangParser.GREATER, 0)

        def GREATER_OR_EQUAL(self):
            return self.getToken(RustMiniLangParser.GREATER_OR_EQUAL, 0)

        def getRuleIndex(self):
            return RustMiniLangParser.RULE_compOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompOperator" ):
                listener.enterCompOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompOperator" ):
                listener.exitCompOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompOperator" ):
                return visitor.visitCompOperator(self)
            else:
                return visitor.visitChildren(self)




    def compOperator(self):

        localctx = RustMiniLangParser.CompOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_compOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RustMiniLangParser.EQUAL) | (1 << RustMiniLangParser.NOT_EQUAL) | (1 << RustMiniLangParser.LESS) | (1 << RustMiniLangParser.LESS_OR_EQUAL) | (1 << RustMiniLangParser.GREATER) | (1 << RustMiniLangParser.GREATER_OR_EQUAL))) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RustMiniLangParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type(self):

        localctx = RustMiniLangParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==RustMiniLangParser.T__6 or _la==RustMiniLangParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintIdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RustMiniLangParser.ID, 0)

        def getRuleIndex(self):
            return RustMiniLangParser.RULE_printId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintId" ):
                listener.enterPrintId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintId" ):
                listener.exitPrintId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintId" ):
                return visitor.visitPrintId(self)
            else:
                return visitor.visitChildren(self)




    def printId(self):
